Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8204294

[REDO] - JVMFlag::printError missing ATTRIBUTE_PRINTF

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3 P3
    • 12
    • 11
    • hotspot
    • None
    • b14
    • generic
    • generic

      JVMFlag::printError is a printf-style variadic function, added as part of JDK-8133564. The declaration needs an ATTRIBUTE_PRINTF decorator.

            gziemski Gerard Ziemski (Inactive)
            gziemski Gerard Ziemski (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: