8204294: [REDO] - JVMFlag::printError missing ATTRIBUTE_PRINTF

Added ATTRIBUTE_PRINTF to JVMFlag::printError

Reviewed-by: kbarrett, coleenp